--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test nodemon --exec \"mocha tests.js --reporter spec  --full-trace --timeout 10000\""
   },
   "repository": {
     "type": "git",
@@ -19,34 +19,40 @@
   },
   "homepage": "https://github.com/SHADOWZXCOFFICIAL/admin-shop#readme",
   "dependencies": {
-    "argon2": "^0.28.5",
-    "body-parser": "^1.20.0",
-    "connect-mongo": "^4.6.0",
+    "argon2": "^0.30.3",
+    "body-parser": "^1.20.2",
+    "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "module-alias": "^2.2.2",
-    "mongoose": "^6.4.0",
+    "mongoose": "^7.0.4",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.7.7",
+    "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.1.2",
+    "passport-local-mongoose": "^8.0.0",
     "rand-token": "^1.0.1",
-    "validator": "^13.7.0",
-    "winston": "^3.8.1"
+    "validator": "^13.9.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.18"
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.2.0",
+    "nodemon": "^2.0.22"
   },
   "_moduleAliases": {
-    "@app": "./src",
+    "@app": "./",
     "@root": ".",
     "@Models": "./model",
     "@Util": "./util",
-    "@Route": "./route",
-    "@Controller": "./controller"
+    "@Router": "./controller/router",
+    "@Controller": "./controller",
+    "@Middleware": "./middleware",
+    "Test": "./test"
   }
 }
